# FairyCam

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: build.yml
fuzzer_example/: CMakeLists.txt  main.cpp
proptest_example/: CMakeLists.txt  main.cpp  ports.hpp  system.hpp
src/: AnyCamera.hpp  CMakeLists.txt  DirectoryCamera.hpp  DirectoryTriggerCamera.cpp  DirectoryTriggerCamera.hpp  FairyCam.cpp  FileCamera.cpp  FileCamera.hpp  HttpCamera.cpp  HttpCamera.hpp  IsAnyCamera.hpp  MemoryCamera.cpp  MemoryCamera.hpp
src/chaos/: BernoulliSequence.hpp  BinaryBlobSequence.hpp  ChaosCamera.hpp  Exceptions.hpp  NoErrorSequence.hpp  RandomSequence.hpp  Sequence.hpp
tests/: AnyCamera.cpp  CMakeLists.txt  DirectoryCamera.cpp  DirectoryTriggerCamera.cpp  FileCamera.cpp  HttpCamera.cpp  MemoryCamera.cpp  tsan_suppressions.txt
tests/chaos/: BernoulliSequence.cpp  BinaryBlobSequence.cpp  ChaosCamera.cpp  RandomSequence.cpp
